--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4.5.23"
+clap = { version = "4.5.23", features = ["derive"] }
+clap_derive = { version = "4.0.0-rc.1"}
 rand = "0.8.5"
